Feat: sections our-technik and services

--- a/gallery.html
+++ b/gallery.html
@@ -31,8 +31,6 @@
             <li class="nav-bar__item">
               <a class="nav-bar__link text_style_navbar " href="./machines.html">Наша техника</a>
             </li>
-
-
             <li class="nav-bar__item ">
               <a class="nav-bar__link text_style_navbar" href="./services.html">Сервис</a>
             </li>
@@ -44,12 +42,16 @@
             </li>
             <li class="nav-bar__item">
               <a class="nav-bar__link text_style_navbar nav-bar__link_active" href="./gallery.html">Галерея работ</a>
+            <li class="nav-bar__item">
+              <a class="nav-bar__link text_style_navbar" href="./news.html">Новости</a>
+            </li>
             </li>
           </ul>
         </div>
       </nav>
       <div class="header__topline">
         <div class="header__info">
+          <p class="text_style_bold-paragraph header__hours">Понедельник - Пятница 8:00 - 19:00</p>
           <a class="header__tel text_style_bold-paragraph link_style_regular" href="tel:+74955772710">+7 (495) 577
             27
             10</a>
