--- a/index.html
+++ b/index.html
@@ -44,14 +44,18 @@
             <li class="nav-bar__item">
               <a class="nav-bar__link text_style_navbar" href="./gallery.html">Галерея работ</a>
             </li>
+            <li class="nav-bar__item">
+              <a class="nav-bar__link text_style_navbar" href="./news.html">Новости</a>
+            </li>
           </ul>
         </div>
       </nav>
       <div class="header__topline">
         <div class="header__info">
+
+          <p class="text_style_bold-paragraph header__hours">Понедельник - Пятница 8:00 - 19:00</p>
           <a class="header__tel text_style_bold-paragraph link_style_regular" href="tel:+74955772710">+7 (495) 577
-            27
-            10</a>
+            2710</a>
           <a class="header__address text_style_bold-paragraph link_style_regular"
             href="https://yandex.uz/maps/-/CCUrB8SfgC">Волгоград, ул Переяславская д.20Б</a>
         </div>
@@ -121,112 +125,31 @@
 
     </section>
 
-    <!-- Tractors we make -->
 
-
-
-    <section class="our-machines">
-      <div class="section-intro_type_fullwidth">
-        <h2 class="section-intro__title text_style_title">Наша техника</h2>
-        <p class="section-intro__subtitle text_style_bold-paragraph">
-          С 2015 года компания наладила свое производство тракторов и оборудования.
-        </p>
-        <div class="section-intro__dash"></div>
-      </div>
-
-      <div class="tractor">
-
-        <img class="tractor__img" src="./images/our-tractor-model_1.png" alt="">
-
-        <div class="tractor__properties tractor__properties_type_engine tractor__properties_position_left">
-          <p class="tractor__prop-text text_style_bold-paragraph">Двигатель: Д-440-22 (А-41)</p>
-          <p class="tractor__prop-text text_style_bold-paragraph">Двигатели А-41 — надежность и безотказность,
-            проверенная временем.</p>
-        </div>
-
-        <div class="tractor__properties tractor__properties_type_cabin tractor__properties_position_left">
-          <p class="tractor__prop-text text_style_bold-paragraph">Цельнометаллическая кабина:</p>
-          <p class="tractor__prop-text text_style_bold-paragraph">Трактор имеет герметизированную шумо- и
-            виброизолированную кабину.</p>
-
-        </div>
-
-        <div class="tractor__properties tractor__properties_type_electric tractor__properties_position_right">
-          <p class="tractor__prop-text text_style_bold-paragraph">Новое электрооборудование:</p>
-          <p class="tractor__prop-text text_style_bold-paragraph">Напряжение бортсети – 12 В</p>
-
-        </div>
-
-        <div class="tractor__properties tractor__properties_type_otval tractor__properties_position_left">
-          <p class="tractor__prop-text text_style_bold-paragraph">Универсальный отвал:</p>
-          <p class="tractor__prop-text text_style_bold-paragraph">Бульдозерное оборудование широко применяется на
-            земляных, дорожно-строительных и планировочных работах.</p>
-        </div>
-
-        <div class="tractor__properties tractor__properties_type_chassis tractor__properties_position_right">
-          <p class="tractor__prop-text text_style_bold-paragraph"> Надежные гусеничное шасси:</p>
-          <p class="tractor__prop-text text_style_bold-paragraph">Стандартная гусеница 390мм или Болотная гусеница 670
-            мм</p>
-
-        </div>
-
-        <div class="tractor__properties tractor__properties_type_gearbox tractor__properties_position_right">
-          <p class="tractor__prop-text text_style_bold-paragraph"> Автоматическая коробка передач:</p>
-          <p class="tractor__prop-text text_style_bold-paragraph">Это увеличивает производительность машины и упрощает
-            управление ею</p>
-
-        </div>
-
-
-
-      </div>
-      <div class="tractor__links-wrapper">
-        <a class="tractor__link" href="./machines.html">Наша техника</a>
-        <a class="tractor__link" href="./machines.html">Подробнее о модели</a>
-      </div>
-
-    </section>
-
-
-
-    <!-- Review section
-    <section class="review section-box">
-      <div class="section-intro">
-        <h2 class="section-intro__title text_style_title">Причины обращаться к нам</h2>
-        <p class="section-intro__subtitle text_style_bold-paragraph">
-          Высокое качество и скорость выполнения работ. Множество положительных отзывов</p>
-        <div class="section-intro__dash"></div>
-      </div>
-      <div class="review__widget" style="max-width: 760px;height:700px;overflow:hidden;position:relative;"><iframe
-          style="width:100%;height:100%;border:1px solid #e6e6e6;border-radius:8px;box-sizing:border-box"
-          src="https://yandex.ru/maps-reviews-widget/226327670406?comments"></iframe><a
-          href="https://yandex.uz/maps/org/muzei_zapovednik_izmailovo/226327670406/" target="_blank"
-          style="box-sizing:border-box;text-decoration:none;color:#b3b3b3;font-size:10px;font-family:YS Text,sans-serif;padding:0 20px;position:absolute;bottom:8px;width:100%;text-align:center;left:0;overflow:hidden;text-overflow:ellipsis;display:block;max-height:14px;white-space:nowrap;padding:0 16px;box-sizing:border-box">Музей-заповедник
-          Измайлово на карте Москвы — Яндекс Карты</a></div>
-    </section>
-      -->
-    <!-- Expert team section -->
     <section class="provide">
       <div class="section-intro_type_fullwidth">
-        <h2 class="section-intro__title text_style_title">Мы предоставляем Экспертное Обслуживание</h2>
+        <h2 class="section-intro__title text_style_title">Чем мы занимаемся</h2>
         <p class="section-intro__subtitle text_style_bold-paragraph">
-          Мы стремимся заслужить ваше доверие и установить с вами долгосрочные отношения
+          У нас налажено производство собственной сельскохозяйственной техники. Мы умеем делать 2 вида надежных
+          тракторов. ПОмимо этого мы пресдоставляем услуги по полному техническому обслуживанию сельскохозяйственной
+          техники. А также продаем запчасти собственного произваодстваю
         </p>
+
         <div class="section-intro__dash"></div>
       </div>
       <div class="provide__selector-wrapper">
         <button data-service-provided="machines" class="provide__selector-btn provide__selector-btn_active"
           type="button">
           <img class="provide__selector-img" src="./images/machines.svg" alt="Наша техника">
-          <p class="text_style_paragraph-reset text_style_regular-paragraph">Дополнительные услуги</p>
+          <p class="text_style_paragraph-reset text_style_regular-paragraph">Наша техника</p>
         </button>
         <button data-service-provided="advantage" class="provide__selector-btn" type="button">
           <img class="provide__selector-img" src="./images/general-service.svg" alt="Наша техника">
-          <p class="text_style_paragraph-reset text_style_regular-paragraph">Наши преимущества</p>
+          <p class="text_style_paragraph-reset text_style_regular-paragraph">Сервисы</p>
         </button>
         <button data-service-provided="details" class="provide__selector-btn" type="button">
           <img class="provide__selector-img" src="./images/regular-service.svg" alt="Наша техника">
-          <p class="text_style_paragraph-reset text_style_regular-paragraph">О компании</p>
+          <p class="text_style_paragraph-reset text_style_regular-paragraph">Запчасти</p>
         </button>
         <!---
           <button class="provide__selector-btn" type="button">
@@ -250,7 +173,7 @@
               <li class="provide__list-item text_style_regular-paragraph-white-bold">Гарантия 3 года</li>
               <li class="provide__list-item text_style_regular-paragraph-white-bold">Гарантия 3 года</li>
             </ul>
-            <a class="provide__link text_style_regular-paragraph" href="./machines.html">Узнать подробнее</a>
+            <a class="provide__link text_style_regular-paragraph" href="./machines.html">Наша техника</a>
           </div>
         </div>
 
@@ -279,6 +202,7 @@
               распространяется наша гарантия 12 месяцев
               / 12 000 миль.</p>
           </div>
+          <a class="provide__link text_style_regular-paragraph" href="./services.html">Узнать про сервис</a>
         </div>
 
         <div class="provide__info-wraper provide__info-wraper_type_details">
@@ -300,19 +224,47 @@
               </li>
               <li class="provide__list-item text_style_regular-paragraph-white-bold">Гарантия 3 года</li>
             </ul>
-            <a class="provide__link text_style_regular-paragraph" href="./spare-parts.html">Узнать подробнее</a>
+            <a class="provide__link text_style_regular-paragraph" href="./spare-parts.html">Посмотреть запчасти</a>
           </div>
         </div>
       </div>
     </section>
 
+
+    <!-- Tractors we make -->
+
+
+
+
+
+
+
+    <!-- Review section
+    <section class="review section-box">
+      <div class="section-intro">
+        <h2 class="section-intro__title text_style_title">Причины обращаться к нам</h2>
+        <p class="section-intro__subtitle text_style_bold-paragraph">
+          Высокое качество и скорость выполнения работ. Множество положительных отзывов</p>
+        <div class="section-intro__dash"></div>
+      </div>
+      <div class="review__widget" style="max-width: 760px;height:700px;overflow:hidden;position:relative;"><iframe
+          style="width:100%;height:100%;border:1px solid #e6e6e6;border-radius:8px;box-sizing:border-box"
+          src="https://yandex.ru/maps-reviews-widget/226327670406?comments"></iframe><a
+          href="https://yandex.uz/maps/org/muzei_zapovednik_izmailovo/226327670406/" target="_blank"
+          style="box-sizing:border-box;text-decoration:none;color:#b3b3b3;font-size:10px;font-family:YS Text,sans-serif;padding:0 20px;position:absolute;bottom:8px;width:100%;text-align:center;left:0;overflow:hidden;text-overflow:ellipsis;display:block;max-height:14px;white-space:nowrap;padding:0 16px;box-sizing:border-box">Музей-заповедник
+          Измайлово на карте Москвы — Яндекс Карты</a></div>
+    </section>
+      -->
+    <!-- Expert team section -->
+
+
     <!-- services section -->
 
     <section class="services section-box">
       <div class="section-intro">
-        <h2 class="section-intro__title text_style_title">Наши рекомендуемые услуги</h2>
+        <h2 class="section-intro__title text_style_title">Наши запчасти</h2>
         <p class="section-intro__subtitle text_style_bold-paragraph">
-          Мы предлагаем полный спектр услуг по ремонту и обслуживанию
+          Мы предлагаем широкий спектр надежных запасных частей для сельскохозяйственной техники
         </p>
         <div class="section-intro__dash"></div>
       </div>
@@ -326,13 +278,13 @@
               <button id="diagnose_btn" data-type-service-button="diagnostics"
                 class="nav-tabs__btn nav-tabs__btn_active" type="button">
                 <img class="nav-tabs__img" src="./images/stethoscope-svgrepo-com.svg" alt="Диагностика" />
-                <span class="nav-tabs__label text_style_services-btn">Диагностика</span>
+                <span class="nav-tabs__label text_style_services-btn">Кабина</span>
               </button>
             </div>
             <div class="swiper-slide"><button id="engine_btn" data-type-service-button="engine" class="nav-tabs__btn"
                 type="button">
                 <img class="nav-tabs__img" src="./images/engine-motor-svgrepo-com.svg" alt="Ремонт двигателя" />
-                <span class="nav-tabs__label text_style_services-btn">Ремонт двигателя</span>
+                <span class="nav-tabs__label text_style_services-btn">Двигатель</span>
               </button>
             </div>
             <div class="swiper-slide">
@@ -344,7 +296,7 @@
             <div class="swiper-slide">
               <button id="tires_btn" data-type-service-button="tires" class="nav-tabs__btn" type="button">
                 <img class="nav-tabs__img" src="./images/tire-svgrepo-com.svg" alt="Шины" />
-                <span class="nav-tabs__label text_style_services-btn">Шины</span>
+                <span class="nav-tabs__label text_style_services-btn">Шины/гусеницы</span>
               </button>
             </div>
             <div class="swiper-slide">
@@ -364,6 +316,7 @@
           <div class="swiper-pagination"></div>
 
         </div>
+
       </div>
       <div class="services__wrapper">
         <div class="interactive-pic">
@@ -380,7 +333,8 @@
 
 
         </div>
-        <a class="vehicle-container__link text_style_regular-paragraph-white-bold" href="./services.html">Подробнее</a>
+        <a class="vehicle-container__link text_style_regular-paragraph-white-bold" href="./spare-parts.html">Каталог
+          запчастей</a>
 
       </div>
     </section>
