--- a/machines.html
+++ b/machines.html
@@ -44,11 +44,15 @@
             <li class="nav-bar__item">
               <a class="nav-bar__link text_style_navbar" href="./gallery.html">Галерея работ</a>
             </li>
+            <li class="nav-bar__item">
+              <a class="nav-bar__link text_style_navbar" href="./news.html">Новости</a>
+            </li>
           </ul>
         </div>
       </nav>
       <div class="header__topline">
         <div class="header__info">
+          <p class="text_style_bold-paragraph header__hours">Понедельник - Пятница 8:00 - 19:00</p>
           <a class="header__tel text_style_bold-paragraph link_style_regular" href="tel:+74955772710">+7 (495) 577
             27
             10</a>
@@ -64,18 +68,138 @@
 
   </header>
 
-  <main>
+  <main class="content">
 
     <article class="page-title">
       <h2 class="page-title__header text_style_title-white">Наша техника</h2>
     </article>
 
-    <h1 class="development">Страница "Наша техника" в разработке</h1>
+    <section class="our-machines">
+      <div class="section-intro_type_fullwidth">
+        <h2 class="section-intro__title text_style_title">Гусеничный трактор ДТ-75</h2>
+        <p class="section-intro__subtitle text_style_bold-paragraph">
+          Первый выпуск гусеничного трактора ДТ-75 был в далеком уже 1963 году. Но до сих пор эта удачная по конструкции
+          и техническим характеристикам машина, востребована в разных сферах производства и сельского хозяйства. Трактор
+          относится к машинам сельскохозяйственного общего назначения, 3 тягового класса.
+        </p>
+        <div class="section-intro__dash"></div>
+      </div>
+
+      <div class="tractor">
+
+        <img class="tractor__img" src="./images/our-tractor-model_1.png" alt="">
+
+        <div class="tractor__properties tractor__properties_type_engine tractor__properties_position_left">
+          <p class="tractor__prop-text text_style_bold-paragraph">Двигатель: Д-440-22 (А-41)</p>
+          <p class="tractor__prop-text text_style_bold-paragraph">Двигатели А-41 — надежность и безотказность,
+            проверенная временем.</p>
+        </div>
+
+        <div class="tractor__properties tractor__properties_type_cabin tractor__properties_position_left">
+          <p class="tractor__prop-text text_style_bold-paragraph">Цельнометаллическая кабина:</p>
+          <p class="tractor__prop-text text_style_bold-paragraph">Трактор имеет герметизированную шумо- и
+            виброизолированную кабину.</p>
+
+        </div>
+
+        <div class="tractor__properties tractor__properties_type_electric tractor__properties_position_right">
+          <p class="tractor__prop-text text_style_bold-paragraph">Новое электрооборудование:</p>
+          <p class="tractor__prop-text text_style_bold-paragraph">Напряжение бортсети – 12 В</p>
+
+        </div>
+
+        <div class="tractor__properties tractor__properties_type_otval tractor__properties_position_left">
+          <p class="tractor__prop-text text_style_bold-paragraph">Универсальный отвал:</p>
+          <p class="tractor__prop-text text_style_bold-paragraph">Бульдозерное оборудование широко применяется на
+            земляных, дорожно-строительных и планировочных работах.</p>
+        </div>
+
+        <div class="tractor__properties tractor__properties_type_chassis tractor__properties_position_right">
+          <p class="tractor__prop-text text_style_bold-paragraph"> Надежные гусеничное шасси:</p>
+          <p class="tractor__prop-text text_style_bold-paragraph">Стандартная гусеница 390мм или Болотная гусеница 670
+            мм</p>
+
+        </div>
+
+        <div class="tractor__properties tractor__properties_type_gearbox tractor__properties_position_right">
+          <p class="tractor__prop-text text_style_bold-paragraph"> Автоматическая коробка передач:</p>
+          <p class="tractor__prop-text text_style_bold-paragraph">Это увеличивает производительность машины и упрощает
+            управление ею</p>
+
+        </div>
+
+      </div>
+      <div class="tractor__links-wrapper">
+        <!--<a class="tractor__link" href="./machines.html">Наша техника</a> -->
+        <a class="tractor__link" href="./DT-75.html">Подробнее о модели</a>
+      </div>
+
+    </section>
+
+    <section class="our-machines">
+      <div class="section-intro_type_fullwidth">
+        <h2 class="section-intro__title text_style_title">Гусеничный трактор ВЗГМ-90</h2>
+        <p class="section-intro__subtitle text_style_bold-paragraph">
+          Гусеничный трактор ВЗГМ-90 – усовершенствованная модель трактора ДТ-75, которые был очень популярен в СССР.
+          Его производство началось в 2009 году. Новая модель трактора имеет некоторые конструкторские и дизайнерские
+          отличия, по сравнению со своим прототипом. Для ее создания использовались самые современные композитные
+          материалы.
+        </p>
+        <div class="section-intro__dash"></div>
+      </div>
+
+      <div class="tractor">
+
+        <img class="tractor__img" src="./images/our-tractor-model_1.png" alt="">
+
+        <div class="tractor__properties tractor__properties_type_engine tractor__properties_position_left">
+          <p class="tractor__prop-text text_style_bold-paragraph">Двигатель: Д-440-22 (А-41)</p>
+          <p class="tractor__prop-text text_style_bold-paragraph">Двигатели А-41 — надежность и безотказность,
+            проверенная временем.</p>
+        </div>
+
+        <div class="tractor__properties tractor__properties_type_cabin tractor__properties_position_left">
+          <p class="tractor__prop-text text_style_bold-paragraph">Цельнометаллическая кабина:</p>
+          <p class="tractor__prop-text text_style_bold-paragraph">Трактор имеет герметизированную шумо- и
+            виброизолированную кабину.</p>
+
+        </div>
+
+        <div class="tractor__properties tractor__properties_type_electric tractor__properties_position_right">
+          <p class="tractor__prop-text text_style_bold-paragraph">Новое электрооборудование:</p>
+          <p class="tractor__prop-text text_style_bold-paragraph">Напряжение бортсети – 12 В</p>
+
+        </div>
+
+        <div class="tractor__properties tractor__properties_type_otval tractor__properties_position_left">
+          <p class="tractor__prop-text text_style_bold-paragraph">Универсальный отвал:</p>
+          <p class="tractor__prop-text text_style_bold-paragraph">Бульдозерное оборудование широко применяется на
+            земляных, дорожно-строительных и планировочных работах.</p>
+        </div>
+
+        <div class="tractor__properties tractor__properties_type_chassis tractor__properties_position_right">
+          <p class="tractor__prop-text text_style_bold-paragraph"> Надежные гусеничное шасси:</p>
+          <p class="tractor__prop-text text_style_bold-paragraph">Стандартная гусеница 390мм или Болотная гусеница 670
+            мм</p>
+
+        </div>
+
+        <div class="tractor__properties tractor__properties_type_gearbox tractor__properties_position_right">
+          <p class="tractor__prop-text text_style_bold-paragraph"> Автоматическая коробка передач:</p>
+          <p class="tractor__prop-text text_style_bold-paragraph">Это увеличивает производительность машины и упрощает
+            управление ею</p>
+
+        </div>
+
+      </div>
+      <div class="tractor__links-wrapper">
+        <!--<a class="tractor__link" href="./machines.html">Наша техника</a> -->
+        <a class="tractor__link" href="./VZGM-90.html">Подробнее о модели</a>
+      </div>
+
+    </section>
 
   </main>
-
-
-
 
 
   <!-- Footer section starts-->
