Feat: add gallery section

--- a/Preventive-Maintenance.html
+++ b/Preventive-Maintenance.html
@@ -81,7 +81,7 @@
         alt="">
       <div class="aside-menu">
         <ul class="aside-menu__block service-info__nav">
-          <li><a class="aside-menu__link aside-menu__item text_style_regular-paragraph-dark"
+          <li><a class="aside-menu__link aside-menu__item aside-menu__item_active text_style_regular-paragraph-dark"
               href="">Профилактическое&nbspОбслуживание</a></li>
           <li><a class="aside-menu__link aside-menu__item text_style_regular-paragraph-dark"
               href="./general-maintenance.html">Капитальный
@@ -90,7 +90,7 @@
           </li>
         </ul>
         <ul class="aside-menu__block service-info__nav">
-          <h3>Напишите нам</h3>
+          <h3 class="aside-menu__subtitle">Напишите нам</h3>
           <li>
             <p
               class="text_style_regular-paragraph-dark aside-menu__item aside-menu__link text_style_bold-paragraph header__hours header__hours_color_black">
