--- a/general-maintenance.html
+++ b/general-maintenance.html
@@ -83,13 +83,14 @@
         <ul class="aside-menu__block service-info__nav">
           <li><a class="aside-menu__link aside-menu__item text_style_regular-paragraph-dark"
               href="./Preventive-Maintenance.html">Профилактическое&nbspОбслуживание</a></li>
-          <li><a class="aside-menu__link aside-menu__item text_style_regular-paragraph-dark" href="">Капитальный
+          <li><a class="aside-menu__link aside-menu__item aside-menu__item_active text_style_regular-paragraph-dark"
+              href="">Капитальный
               ремонт</a></li>
           <li><a class="aside-menu__link aside-menu__item text_style_regular-paragraph-dark" href="">Текущий сервис</a>
           </li>
         </ul>
         <ul class="aside-menu__block service-info__nav">
-          <h3>Напишите нам</h3>
+          <h3 class="aside-menu__subtitle">Напишите нам</h3>
           <li>
             <p
               class="text_style_regular-paragraph-dark aside-menu__item aside-menu__link text_style_bold-paragraph header__hours header__hours_color_black">
