--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         <div class="provide__info-wraper provide__info-wraper_type_details">
           <img class="provide__service-img" src="./images/details.jpeg" alt="">
           <div class="provide__service-description">
-            <h3 class="text_style_title-white">О компании</h3>
+            <h3 class="text_style_title-white">Запчасти</h3>
             <p class="provide__service-text">Мы используем новейшее диагностическое оборудование, чтобы
               гарантировать, что ваш автомобиль
               отремонтирован или обслужен должным образом и своевременно. Мы являемся членом Professional Auto Service,
