Fix: tractor info section

--- a/machines.html
+++ b/machines.html
@@ -52,11 +52,10 @@
       </nav>
       <div class="header__topline">
         <div class="header__info">
-          <p class="text_style_bold-paragraph header__hours">Понедельник - Пятница 8:00 - 19:00</p>
-          <a class="header__tel text_style_bold-paragraph link_style_regular" href="tel:+74955772710">+7 (495) 577
-            27
-            10</a>
-          <a class="header__address text_style_bold-paragraph link_style_regular"
+          <p class="header__hours header__icon text_style_bold-paragraph ">Понедельник - Пятница 8:00 - 19:00</p>
+          <a class="header__tel header__icon text_style_bold-paragraph link_style_regular" href="tel:+74955772710">+7
+            (495) 577 27 10</a>
+          <a class="header__address header__icon text_style_bold-paragraph link_style_regular"
             href="https://yandex.uz/maps/-/CCUrB8SfgC">Волгоград, ул Переяславская д.20Б</a>
         </div>
         <div class="social-media">
@@ -236,7 +235,7 @@
     </div>
     <div class="footer__wrapper">
       <div class="footer__about-us">
-        <h3 class="footer__subtitle text_style_subtitle">О нас</h3>
+        <h3 class="footer__subtitle text_style_subtitle-white">О нас</h3>
         <div class="section-intro__dash section-intro__dash_footer"></div>
         <p class="footer__paragraph text_style_regular-paragraph">Бронницы Бояркино</p>
         <p class="footer__paragraph text_style_regular-paragraph">17 километр, д. 15</p>
@@ -254,7 +253,7 @@
         </div>
       </div>
       <div class="footer__our-services">
-        <h3 class="footer__subtitle text_style_subtitle">Наши услуги</h3>
+        <h3 class="footer__subtitle text_style_subtitle-white">Наши услуги</h3>
         <div class="section-intro__dash section-intro__dash_footer"></div>
         <ul class="footer__list-container">
           <li class="footer__paragraph_ticked ticked-list text_style_regular-paragraph">Диагностика двигателя</li>
@@ -267,7 +266,7 @@
         </ul>
       </div>
       <div class="footer__hours">
-        <h3 class="footer__subtitle text_style_subtitle">Часы работы</h3>
+        <h3 class="footer__subtitle text_style_subtitle-white">Часы работы</h3>
         <div class="section-intro__dash section-intro__dash_footer"></div>
         <div class="footer__list-wrapper text_style_regular-paragraph">
           <p class="footer__paragraph text_style_regular-paragraph">Понедельник:</p>
