--- a/DT-75.html
+++ b/DT-75.html
@@ -53,11 +53,10 @@
       </nav>
       <div class="header__topline">
         <div class="header__info">
-          <p class="text_style_bold-paragraph header__hours">Понедельник - Пятница 8:00 - 19:00</p>
-          <a class="header__tel text_style_bold-paragraph link_style_regular" href="tel:+74955772710">+7 (495) 577
-            27
-            10</a>
-          <a class="header__address text_style_bold-paragraph link_style_regular"
+          <p class="header__hours header__icon text_style_bold-paragraph ">Понедельник - Пятница 8:00 - 19:00</p>
+          <a class="header__tel header__icon text_style_bold-paragraph link_style_regular" href="tel:+74955772710">+7
+            (495) 577 27 10</a>
+          <a class="header__address header__icon text_style_bold-paragraph link_style_regular"
             href="https://yandex.uz/maps/-/CCUrB8SfgC">Волгоград, ул Переяславская д.20Б</a>
         </div>
         <div class="social-media">
@@ -72,117 +71,172 @@
   <main class="content">
 
     <article class="page-title">
-      <h2 class="page-title__header text_style_title-white">НАША ТЕХНИКА / ДТ-75</h2>
+      <h2 class="page-title__header text_style_title-white">Трактор ДТ-75 </h2>
+      <div class="page-title__path-container">
+        <a class="page-title__link" href="./machines.html">Наша техника</a>
+        <span class="page-title__separator"> &nbsp;&nbsp;/&nbsp;&nbsp; </span>
+        <p class="page-title__directory">Трактор ДТ-75</p>
+      </div>
     </article>
 
+
+    <!-- New sections -->
+
     <section class="model-info section-box">
-
       <img class="model-info__photo" src="./images/photo-dt-75-8.jpeg" alt="">
-
       <div class="model-info__brief-description">
-        <h3 class="model-info__model-title text_style_title">Гусеничный трактор ДТ-75</h3>
-        <p class="text_style_regular-paragraph model-info__model-descr"> На тракторе установлен улучшенный двигатель с
+        <h2 class="model-info__model-title text_style_title">Трактор ДТ-75</h2>
+        <p class="text_style_model-info-paragraph model-info__model-descr">На тракторе установлен улучшенный двигатель с
           повышенными техническими характеристиками.</p>
-        <p class="text_style_regular-paragraph model-info__model-descr">Каркас кабины
+        <p class="text_style_model-info-paragraph model-info__model-descr">Каркас кабины
           трактора стал более безопасным, а сама она стала более комфортной. Капот машины сделан из стеклопластика и
           откидывается.</p>
-        <p class="text_style_regular-paragraph model-info__model-descr">Глушитель и выхлопная труба расположены на
-          передней стойке кабины. Также разработана и применена новая расцветка трактора: бело-голубая, но есть модели
-          тракторов синего цвета.</p>
+        <p class="text_style_model-info-paragraph model-info__model-descr">Глушитель и выхлопная труба расположены на
+          передней стойке кабины. Также разработана и применена новая расцветка трактора.</p>
       </div>
       <div class="model-info__menu">
+        <div class="aside-menu">
+          <aside class="aside-menu__block">
+            <ul class="aside-menu__list service-info__nav">
+              <li>
+                <button data-model-info="description"
+                  class="aside-menu__btn aside-menu__item text_style_model-info-paragraph aside-menu__item_active"
+                  href="./Preventive-Maintenance.html">Описание
+                </button>
+              </li>
+              <li>
+                <button data-model-info="advantages"
+                  class="aside-menu__btn aside-menu__item text_style_model-info-paragraph">Преимущества
+                </button>
+              </li>
+              <li>
+                <button data-model-info="equipment"
+                  class="aside-menu__btn aside-menu__item text_style_model-info-paragraph">Комплектация
+                </button>
+              </li>
+              <li>
+                <button data-model-info="modifications"
+                  class="aside-menu__btn aside-menu__item text_style_model-info-paragraph">Модификации
+                </button>
+              </li>
+            </ul>
+          </aside>
 
-        <div class="swiper swiper-model">
+          <aside class="aside-menu__block">
+            <h3 class="text_style_aside-title">Свяжитесь с нами</h3>
+            <ul class="aside-menu__list service-info__nav ">
+              <li class="aside-menu__item connect-us__icon connect-us__hours">
+                <a class="link_style_regular aside-menu__link">
+                  <p class=" text_style_model-info-paragraph  text_style_aside-subtitle">
+                    Часы работы:
+                  </p>
+                  <p class="text_style_model-info-paragraph ">
+                    Пн - Пт 8:00 - 19:00
+                  </p>
+                </a>
 
-          <!-- Additional required wrapper -->
-          <div class="swiper-wrapper">
-            <!-- Slides -->
-            <div class="swiper-slide">
-              <button data-model-info="description" class="nav-tabs__btn nav-tabs__btn_active model-info__btn"
-                type="button">
-                <span class="nav-tabs__label text_style_services-btn">Описание</span>
-              </button>
-            </div>
-            <div class="swiper-slide">
-              <button data-model-info="advantages" class="nav-tabs__btn model-info__btn" type="button">
-                <span class="nav-tabs__label text_style_services-btn">Преимущества</span>
-              </button>
-            </div>
-            <div class="swiper-slide">
-              <button data-model-info="equipment" class="nav-tabs__btn model-info__btn" type="button">
-                <span class="nav-tabs__label text_style_services-btn">Комплектация</span>
-              </button>
-            </div>
-            <div class="swiper-slide">
-              <button data-model-info="modifications" class="nav-tabs__btn model-info__btn" type="button">
-                <span class="nav-tabs__label text_style_services-btn">Модификации</span>
-              </button>
-            </div>
-          </div>
-          <!-- If we need pagination -->
-          <div class="swiper-pagination"></div>
+              </li>
+              <li class="aside-menu__item connect-us__tel connect-us__icon">
+                <a class="link_style_regular aside-menu__link" href="tel:+74955772710">
+                  <p class="text_style_model-info-paragraph text_style_aside-subtitle">
+                    Телефон
+                  </p>
+                  <p class="text_style_model-info-paragraph"> +7 (495) 577 27 10</p>
+                </a>
+              </li>
+              <li class="aside-menu__item connect-us__icon connect-us__mail">
+                <a class="link_style_regular aside-menu__link" href="mailto:web-traktor.ru">
+                  <p class="text_style_model-info-paragraph text_style_aside-subtitle">
+                    E-mail:
+                  </p>
+                  <p class="text_style_model-info-paragraph">web-tractor@mail.com</p>
+                </a>
+              </li>
+              <li class="aside-menu__item connect-us__icon connect-us__address">
+                <a class="link_style_regular aside-menu__link" href="https://yandex.uz/maps/-/CCUrB8SfgC">
+                  <p class="text_style_model-info-paragraph text_style_aside-subtitle">
+                    Адрес:
+                  </p>
+                  <p class="text_style_model-info-paragraph">Волгоград, ул Переяславская д.20 Б</p>
+                </a>
+              </li>
+            </ul>
+          </aside>
         </div>
 
-
       </div>
-
-
       <div class="model-info__display">
         <div class="model-info__block model-info__block_text_description model-info__block_active">
-          <p class="model-info__paragraph text_style_subtitle"> ОПИСАНИЕ ТРАКТОРА ДТ-75:</p>
-          <p class="model-info__paragraph">Трактор ДТ-75 легко ремонтировать. Опытный ремонтник без труда справиться с
-            любой поломкой, тем более что к нему подходят запчасти от его предшественника.
-          </p>
-          <p class="model-info__paragraph"> На данный момент есть множество заводских разновидностей трактора. Поэтому
+          <h3 class="text_style_title model-info__model-title"> Описание ДТ-75 :</h3>
+          <p class="text_style_model-info-paragraph">Трактор ДТ-75 легко ремонтировать. Опытный ремонтник без труда
+            справиться с любой поломкой, тем более что к нему подходят запчасти от его предшественника.
+          <p class="text_style_model-info-paragraph">На данный момент есть множество заводских разновидностей трактора.
+            Поэтому
             можно удовлетворить требования любого заказчика. Он может работать в условиях города или села..</p>
-          <p class="model-info__paragraph">В зависимости от цели применения машины, она оборудуется гусеницами разного
+          <p class="text_style_model-info-paragraph">В зависимости от цели применения машины, она оборудуется гусеницами
+            разного
             типа:
             Для сельхозработ и дорожного строительства ставятся звенчатые гусеницы;
             Для города и пашни ставятся ленточные резиноармированные.</p>
-          <p class="model-info__paragraph">В производстве трактора применяются детали, требующие высокотехнологичного
+          <p class="text_style_model-info-paragraph">В производстве трактора применяются детали, требующие
+            высокотехнологичного
             изготовления на иностранном
             предприятии. К таким деталям относятся пневмоусилитель, блок-картер для двигателя А-41СИ-02.</p>
-          <p class="model-info__paragraph">Несмотря на достигнутый успех, конструкторы продолжают разрабатывать новые
+          <p class="text_style_model-info-paragraph">Несмотря на достигнутый успех, конструкторы продолжают
+            разрабатывать новые
             модели тракторов и совершенствовать уже разработанные.</p>
+
+          <!--p class="text_style_model-info-paragraph">В производстве трактора применяются детали, требующие высокотехнологичного
+            изготовления на иностранном
+            предприятии. К таким деталям относятся пневмоусилитель, блок-картер для двигателя А-41СИ-02.</p>
+          <p class="text_style_model-info-paragraph">Несмотря на достигнутый успех, конструкторы продолжают разрабатывать новые
+            модели тракторов и совершенствовать уже разработанные.</p-->
         </div>
         <div class="model-info__block model-info__block_text_advantages">
-          <p class="model-info__paragraph text_style_subtitle">ПРЕИМУЩЕСТВА ДАННОЙ МОДЕЛИ:
-          </p>
-          <p class="model-info__paragraph">Топливный бак 300 литров и он расположен за кабинкой;</p>
-          <p class="model-info__paragraph">Гидрораспределитель также установлен позади кабинки, что не позволяет маслу
-            проникать внутрь кабины;</p>
-          <p class="model-info__paragraph">На приборной панели установлены электрические датчики;</p>
-          <p class="model-info__paragraph">Кабинка стала двух дверной и оборудовано два места;</p>
-          <p class="model-info__paragraph">Габаритные размеры капота увеличились.</p>
+          <h3 class="text_style_title model-info__model-title">Преимущества ДТ-75:
+          </h3>
+          <p class="text_style_model-info-paragraph">Топливный бак 300 литров и он расположен за кабинкой</p>
+          <p class="text_style_model-info-paragraph">
+            Гидрораспределитель также установлен позади кабинки, что не позволяет маслу
+            проникать внутрь кабины; </p>
+          <p class="text_style_model-info-paragraph">На приборной панели установлены электрические датчики;</p>
+          <p class="text_style_model-info-paragraph">Кабинка стала двух дверной и оборудовано два места;</p>
+          <p class="text_style_model-info-paragraph">Габаритные размеры капота увеличились.</p>
+
         </div>
         <div class="model-info__block model-info__block_text_equipment">
-          <p class="model-info__paragraph text_style_subtitle"> КОМПЛЕКТАЦИЯ ТРАКТОРА ДТ-75:</p>
-          <p class="model-info__paragraph">На тракторе ДТ-75 устанавливается дизельный двигатель одной из трех
+          <h3 class="text_style_title model-info__model-title"> КОМПЛЕКТАЦИЯ ВЗГМ-90:</h3>
+          <p class="text_style_model-info-paragraph">ННа тракторе ДТ-75 устанавливается дизельный двигатель одной из
+            трех
             моделей:
           </p>
-          <p class="model-info__paragraph">А-41СИ-02 производства Алтайского моторного завода.</p>
-          <p class="model-info__paragraph">Д-245.5S2 белорусского производства, оборудованный турбонаддувом (4
+          <p class="text_style_model-info-paragraph">А-41СИ-02 производства Алтайского моторного завода.</p>
+          <p class="text_style_model-info-paragraph">Д-245.5S2 белорусского производства, оборудованный турбонаддувом (4
             цилиндра).</p>
-          <p class="model-info__paragraph">Д260.8S2-850 белорусского производства, оборудованный турбонаддувом (6
+          <p class="text_style_model-info-paragraph">Д260.8S2-850 белорусского производства, оборудованный турбонаддувом
+            (6
             цилиндров).</p>
-        </div>
-        <div class="model-info__block model-info__block_text_modifications">
-          <p class="model-info__paragraph text_style_subtitle">МОДИФИКАЦИИ ТРАКТОРА ДТ-75:</p>
-          <p class="model-info__paragraph">Управление поворотам и сцеплением с помощью пневмоусилителей
-          </p>
-          <p class="model-info__paragraph">Управление поворотом и сцеплением механическим приводом. </p>
-          <p class="model-info__paragraph"> В настоящее время есть множество модификации данной модели трактора, которые
+          <p class="text_style_model-info-paragraph">Управление поворотам и сцеплением с помощью пневмоусилителей.</p>
+          <p class="text_style_model-info-paragraph"> В настоящее время есть множество модификации данной модели
+            трактора,
+            которые
             отличаются друг от друга
             установленными видами дополнительного оборудования и их комбинацией. На трактор могут быть установлены
             следующие виды устройств: задняя гидронавесная система, поворотный бульдозерный отвал, реверс-редуктор,
             универсальный отвал с гидроперекосом, ходоуменьшитель</p>
         </div>
+        <div class="model-info__block model-info__block_text_modifications">
+          <h3 class="text_style_title model-info__model-title">МОДИФИКАЦИИ ДТ-75:</h3>
+          <p class="text_style_model-info-paragraph">Фронтальный погрузчик</p>
+          <p class="text_style_model-info-paragraph">Трактор на регзиновых гузеницах</p>
+          <p class="text_style_model-info-paragraph">Торфянник без навесного оборудования</p>
+          <p class="text_style_model-info-paragraph">Снегоочиститель</p>
+          <p class="text_style_model-info-paragraph">Трубоукладчик</p>
+          <p class="text_style_model-info-paragraph">Бульдозер с универсальным отвалом</p>
+          <p class="text_style_model-info-paragraph">Бульдозер с неповоротным отвалом</p>
+        </div>
       </div>
     </section>
-
-
-
-
   </main>
 
 
@@ -220,7 +274,7 @@
     </div>
     <div class="footer__wrapper">
       <div class="footer__about-us">
-        <h3 class="footer__subtitle text_style_subtitle">О нас</h3>
+        <h3 class="footer__subtitle text_style_subtitle-white">О нас</h3>
         <div class="section-intro__dash section-intro__dash_footer"></div>
         <p class="footer__paragraph text_style_regular-paragraph">Бронницы Бояркино</p>
         <p class="footer__paragraph text_style_regular-paragraph">17 километр, д. 15</p>
@@ -238,7 +292,7 @@
         </div>
       </div>
       <div class="footer__our-services">
-        <h3 class="footer__subtitle text_style_subtitle">Наши услуги</h3>
+        <h3 class="footer__subtitle text_style_subtitle-white">Наши услуги</h3>
         <div class="section-intro__dash section-intro__dash_footer"></div>
         <ul class="footer__list-container">
           <li class="footer__paragraph_ticked ticked-list text_style_regular-paragraph">Диагностика двигателя</li>
@@ -251,7 +305,7 @@
         </ul>
       </div>
       <div class="footer__hours">
-        <h3 class="footer__subtitle text_style_subtitle">Часы работы</h3>
+        <h3 class="footer__subtitle text_style_subtitle-white">Часы работы</h3>
         <div class="section-intro__dash section-intro__dash_footer"></div>
         <div class="footer__list-wrapper text_style_regular-paragraph">
           <p class="footer__paragraph text_style_regular-paragraph">Понедельник:</p>
