--- a/spare-parts.html
+++ b/spare-parts.html
@@ -176,10 +176,13 @@
 
   <template id="card-template">
     <div class="card">
-      <img class="card__photo" src="" alt="">
-      <p class="card__name text_style_regular-paragraph">Кабина</p>
-      <p class="card__price text_style_bold-price">400 000.00 руб.</p>
+      <a class="card__link" href="">
+        <img class="card__photo" src="" alt="">
+        <p class="card__name text_style_regular-paragraph"></p>
+        <p class="card__price text_style_bold-price"></p>
+      </a>
     </div>
+
   </template>
 
   <script src="./script-js/preloader.js"> </script>
